--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "sass": "^1.89.2"
   },
   "devDependencies": {
