service page added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-app-template",
+  "name": "agg-soft-facilities-management",
   "version": "0.0.1",
   "private": true,
   "scripts": {
