--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "@heroui/switch": "2.2.21",
     "@heroui/system": "2.4.19",
     "@heroui/theme": "2.4.19",
+    "@radix-ui/react-label": "^2.1.7",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.25",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.525.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
@@ -57,6 +61,7 @@
     "prettier": "3.5.3",
     "tailwind-variants": "1.0.0",
     "tailwindcss": "4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "5.6.3"
   }
 }
