--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@heroui/button": "2.2.23",
+    "@heroui/chip": "^2.2.19",
     "@heroui/code": "2.2.17",
     "@heroui/dropdown": "^2.3.23",
+    "@heroui/form": "^2.1.23",
     "@heroui/kbd": "2.2.18",
     "@heroui/link": "2.2.20",
     "@heroui/listbox": "2.3.22",
     "@heroui/navbar": "2.2.21",
+    "@heroui/react": "^2.8.1",
     "@heroui/snippet": "2.2.24",
     "@heroui/switch": "2.2.21",
     "@heroui/system": "2.4.19",
