--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "resend": "^4.7.0",
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1"
   },
