--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/kbd": "2.2.18",
     "@heroui/link": "2.2.20",
     "@heroui/listbox": "2.3.22",
+    "@heroui/modal": "^2.2.20",
     "@heroui/navbar": "2.2.21",
     "@heroui/react": "^2.8.1",
     "@heroui/snippet": "2.2.24",
