--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^5.5.0",
     "resend": "^4.7.0",
     "sass": "^1.89.2",
