--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-aria/visually-hidden": "3.8.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs": "^4.0.3",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.525.0",
