--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agg-soft-facilities-management",
   "version": "0.0.1",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,6 +10,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@heroui/button": "2.2.23",
     "@heroui/chip": "^2.2.19",
     "@heroui/code": "2.2.17",
@@ -40,7 +42,6 @@
     "react-dom": "18.3.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^5.5.0",
-    "resend": "^4.7.0",
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1"
   },
