--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.3.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1"
   },
